--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "tmp-cpa",
   "version": "0.1.0",
+  "homepage": "https://username.github.io/ChatReact",
   "private": true,
   "dependencies": {
     "@plasmicapp/cli": "^0.1.322",
     "@plasmicapp/react-web": "^0.2.304",
+    "@plasmicpkgs/plasmic-basic-components": "^0.0.202",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +14,7 @@
     "@types/node": "^16.18.63",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.16",
+    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -22,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
